# matter-at-home

./: .clippy.toml  Cargo.toml  NOTICE  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
examples/: empty.rs  thread.rs  wifi.rs
src/: lib.rs
