[package]
name = "matter-at-home"
version = "0.1.0"
authors = ["David Elias Chris Kopczynski"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/David-Kopczynski/matter-at-home"
license = "GPL-3.0"
keywords = ["matter", "smart-home", "rs-matter", "embassy", "esp32c6"]
publish = false

# ---------- Matter-Applications to choose from ----------

[[bin]]
name = "light"
required-features = ["wifi", "release"]

[[bin]]
name = "sensor-pack"
required-features = ["release"]

[[bin]]
name = "thread-border-router"
required-features = ["release"]

# -------- Examples to debug basic functionality ---------

[[example]]
name = "empty"

[[example]]
name = "thread"
required-features = ["thread"]

[[example]]
name = "wifi"
required-features = ["wifi"]

# -------------------- Linting rules ---------------------

[lints.clippy]
mem_forget = "deny" # esp_hal types are generally not safe to mem::forget

# ------ Compile profiles with basic optimizations -------

[profile.dev]
opt-level = "z"

[profile.release]
debug = true
opt-level = "s"

# ------------------ Available features ------------------

[features]

# Select ESP32C6 by default
default = ["esp32c6"]
esp32c6 = [
    "esp-alloc/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-hal/esp32c6",
    "esp-metadata-generated/esp32c6",
    "esp-println/esp32c6",
    "esp-storage/esp32c6",
    "esp-radio/esp32c6",
    "esp-rtos/esp32c6",
]

# Additional features required for different applications
thread = ["rs-matter-embassy/openthread"]
wifi = ["rs-matter-embassy/embassy-net"]

# Stability options
release = ["esp-backtrace/custom-halt"]

# --------------------- Dependencies ---------------------

[patch.crates-io]
openthread = { git = "https://github.com/sysgrok/openthread.git", branch = "next" }
rs-matter = { git = "https://github.com/sysgrok/rs-matter", branch = "next" }
rs-matter-stack = { git = "https://github.com/sysgrok/rs-matter-stack.git", branch = "next" }

[dependencies]

# Pretty logging output
log = "0.4"

# [no_std] hardware access for ESP32 controllers
# see: https://github.com/esp-rs/esp-hal
esp-alloc = { version = "0.9", features = ["internal-heap-stats"] }
esp-backtrace = { version = "0.18", features = ["println", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["log-04"] }
esp-hal = { version = "1", features = ["log-04", "unstable"] }
esp-metadata-generated = { version = "0.3" }
esp-println = { version = "0.16", features = ["timestamp", "log-04"] }
esp-storage = { version = "0.8" }
esp-radio = { version = "0.17", features = ["ble", "log-04", "unstable"] }
esp-rtos = { version = "0.2", features = ["embassy", "esp-radio", "esp-alloc"] }

# Embassy
# see: https://github.com/embassy-rs/embassy
embassy-embedded-hal = { version = "0.5" }
embassy-executor = { version = "0.9", features = ["log"] }

# Matter
# see: https://github.com/project-chip/rs-matter
rs-matter = { version = "0.1", default-features = false }
rs-matter-embassy = { git = "https://github.com/sysgrok/rs-matter-embassy.git", features = [
    "esp",
    "log",
] }
tinyrlibc = { version = "0.5", default-features = false, features = [
    "utoa",
    "strtoul",
] }
