[package]
name = "matter-at-home"
version = "0.1.0"
authors = ["David Elias Chris Kopczynski"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/David-Kopczynski/matter-at-home"
license = "GPL-3.0"
keywords = ["matter", "smart-home", "rs-matter", "embassy", "esp32c6"]
publish = false

# ---------- Matter-Applications to choose from ----------

[[bin]]
name = "light"
required-features = ["wifi", "release"]

[[bin]]
name = "sensor-pack"
required-features = ["wifi", "release"]

# -------- Examples to debug basic functionality ---------

[[example]]
name = "empty"

[[example]]
name = "thread"
required-features = ["thread"]

[[example]]
name = "wifi"
required-features = ["wifi"]

# -------------------- Linting rules ---------------------

[lints.clippy]
mem_forget = "deny" # esp_hal types are generally not safe to mem::forget

# ------ Compile profiles with basic optimizations -------

[profile.dev]
opt-level = "z"

[profile.release]
debug = true
opt-level = "s"

# ------------------ Available features ------------------

[features]

# Select ESP32C6 by default
default = ["esp32c6"]
esp32c6 = [
    "esp-alloc/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-hal/esp32c6",
    "esp-metadata-generated/esp32c6",
    "esp-println/esp32c6",
    "esp-storage/esp32c6",
    "esp-radio/esp32c6",
    "esp-rtos/esp32c6",
]

# Additional features required for different applications
thread = ["rs-matter-embassy/openthread"]
wifi = ["rs-matter-embassy/embassy-net"]

# Stability options
release = ["esp-backtrace/custom-halt"]

# Ignore unused feature warnings
defmt = []

# --------------------- Dependencies ---------------------

[patch.crates-io]
openthread = { git = "https://github.com/sysgrok/openthread.git", branch = "next" }
rs-matter = { git = "https://github.com/sysgrok/rs-matter", branch = "next" }
rs-matter-embassy = { git = "https://github.com/sysgrok/rs-matter-embassy.git" }
rs-matter-stack = { git = "https://github.com/sysgrok/rs-matter-stack.git", branch = "next" }

[dependencies]

# Pretty logging output
log = "*"

# [no_std] hardware access for ESP32 controllers
# see: https://github.com/esp-rs/esp-hal
esp-alloc = { version = "*", features = ["internal-heap-stats"] }
esp-backtrace = { version = "*", features = ["println", "panic-handler"] }
esp-bootloader-esp-idf = { version = "*", features = ["log-04"] }
esp-hal = { version = "*", features = ["log-04", "unstable"] }
esp-metadata-generated = { version = "*" }
esp-println = { version = "*", features = ["timestamp", "log-04"] }
esp-storage = { version = "*" }
esp-radio = { version = "*", features = ["ble", "log-04", "unstable"] }
esp-rtos = { version = "*", features = ["embassy", "esp-radio", "esp-alloc"] }

# Embassy
# see: https://github.com/embassy-rs/embassy
embassy-embedded-hal = { version = "*" }
embassy-executor = { version = "*", features = ["log"] }

# Matter
# see: https://github.com/project-chip/rs-matter
rs-matter = { version = "*", default-features = false }
rs-matter-embassy = { version = "*", features = ["esp", "log"] }
tinyrlibc = { version = "*", default-features = false, features = [
    "utoa",
    "strtoul",
] }
